...
                    Row(
                      children: [
                        Expanded(
                          child: Padding(
                            padding: const EdgeInsets.symmetric(horizontal: 10),
                            child: TextField(
                              key: const Key('otp'),
                              controller: _otpController,
                              textAlign: TextAlign.center,
                              enabled: true,
                              decoration: const InputDecoration(
                                filled: true,
                                fillColor: Colors.white,
...
                    ),
                    Center(
                      child: Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          ElevatedButton(
                            key: const Key('activateButton'),
                            style: ElevatedButton.styleFrom(
                              foregroundColor: Colors.purple[800],
                              backgroundColor: Colors.purple[50],
                            ),
                            onPressed: () {
                              setState(
...
